16_subseq/grade.txt
Grading at Mon Jul 15 17:00:52 UTC 2019
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:7:19: error: return makes integer from pointer without a cast [-Werror=int-conversion]
   if(n<=0){return NULL;}
                   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
